Add module-access checks to QuickUtils.initStandardGlimpseApp()